--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
             Developed by - Hariti Mittal
         </div>
 
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4>Instructions</h4>
+                        <button class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <div class="modal-body">
+                        <ol>
+                            <li>First keep your laptop screen straight</li>
+                            <li>Move yourself approximately 3-4 feet away from the laptop</li>
+                            <li>Move your right wrist in an ascending and decending manner, a red dot should appear on
+                                your right wrist</li>
+                            <li>Now press the play button, and again move yourself 3-4 feet away from laptop</li>
+                            <li>Now press the play button, and again move yourself 3-4 feet away from laptop</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </center>
 
     <script src="main.js"></script>
